# Change Log
[Chili Bullet Weapons](https://iunius118.github.io/ChiliBulletWeapons/).
[Source](https://github.com/Iunius118/ChiliBulletWeapons).

## [Unreleased]
- Require Minecraft 1.20.1+, Fabric Loader, and Fabric API.

### Changed
- Increase composting chance of half-sized chili potato sandwich.

## [1.1.0]
- Require Minecraft 1.20.1+, Fabric Loader, and Fabric API.

### Added
- Chili bullet gun with bayonet.

### Changed
- Rename `Chili Pepper Seeds` to `Chili Pepper Seeds (CBW)`.
- Change gun item textures.

## [1.0.2.1]
- Require Minecraft 1.20.1+, Fabric Loader, and Fabric API.

### Fixed
- Fix fabric.mod.json.

## [1.0.2]
- Port to 1.20.1 Fabric.
- Require Minecraft 1.20.1+, Fabric Loader, and Fabric API.