@@ -6,6 +6,7 @@
   "item.chilibulletweapons.bayoneted_gun.rifle": "Chili Bullet Rifle with Bayonet",
   "item.chilibulletweapons.bayoneted_gun.shotgun": "Chili Bullet Shotgun with Bayonet",
   "item.chilibulletweapons.bullet_chili": "Bullet-like Chili Pepper",
+  "item.chilibulletweapons.bullet_chili_sack": "Sack of Bullet-like Chili Peppers",
   "item.chilibulletweapons.chili_bullet": "Chili Bullet",
   "item.chilibulletweapons.chili_chicken_sandwich": "Chili Chicken Sandwich",
   "item.chilibulletweapons.chili_fish_sandwich": "Chili Fish Sandwich",
@@ -13,6 +14,7 @@
   "item.chilibulletweapons.chili_potato_sandwich": "Chili Potato Sandwich",
   "item.chilibulletweapons.chili_seeds": "Chili Pepper Seeds (CBW)",
   "item.chilibulletweapons.curved_chili": "Curved Chili Pepper",
+  "item.chilibulletweapons.curved_chili_sack": "Sack of Curved Chili Peppers",
   "item.chilibulletweapons.fried_chili_pepper": "Fried Chili Pepper",
   "item.chilibulletweapons.gun": "Chili Bullet Gun",
   "item.chilibulletweapons.gun.pistol": "Chili Bullet Pistol",
